--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,13 @@
 
 .column a {
     margin: 0 5px;
+    transition: ease 0.4s;
 }
+
+.column a:hover {
+    opacity: 0.7;
+}
+
 .column img{
     margin-top: 8px;
     vertical-align: middle;
