--- a/styles.css
+++ b/styles.css
@@ -50,7 +50,7 @@
     }
 }
 
-/* @media screen and (max-width: 600px) {
+@media screen and (max-width: 600px) {
     .column-4{
         visibility: hidden;
     }
@@ -60,4 +60,4 @@
     .column-3{
         visibility: hidden;
     }
-} */
+}
